[package]
name = "procss"
version = "0.1.13"
edition = "2021"
authors = ["Andrew Stein <andrew@prospective.dev>"]
description = "A simple CSS parsing and transformation framework."
repository = "https://github.com/ProspectiveCo/procss"
license = "Apache-2.0"
keywords = ["compiler", "web", "css"]

[workspace]
members = ["tasks/xtest", "tasks/xbuild", "tasks/utils"]

[lib]
name = "procss"
path = "src/lib.rs"
bench = false

[[bin]]
name = "procss"
path = "src/main.rs"
bench = false

[[bench]]
name = "basic"
harness = false

[features]
iotest = ["dep:mockall"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
lightningcss = "1.0.0-alpha.51"

[dependencies]
# specify version of proc-macro2 (used in mockall)
proc-macro2 = { version = "=1.0.69" }
winnow = "0.5"
# nom = "7.1.1"
anyhow = "1.0.56"
base64 = "0.13.1"
mockall = { version = "0.11.4", optional = true }
# use smallvec 2 because of lifetime variance
smallvec = "2.0.0-alpha.1"

[workspace.dependencies]
grcov = { version = "0.8.13", artifact = "bin" }
once_cell = "1.17.0"
regex = "1.7.0"
wasm-bindgen-cli = { version = "0.2.83", artifact = "bin" }
wasm-opt = "0.111.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.60"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
web-sys = { version = "0.3.60", features = ["console"] }

[profile.release]
lto = true
codegen-units = 1
