[package]
name = "procss-xbuild"
version = "0.1.9"
edition = "2021"

[[bin]]
name = "xbuild"
path = "main.rs"
bench = false

[dependencies]
once_cell = { workspace = true }
procss-utils = { path = "../utils" }
regex = { workspace = true }
wasm-bindgen-cli = { workspace = true }
wasm-opt = { workspace = true }
